Update Open Lab 1.3

--- a/Open-Lab-0.1/Open Lab 1.3
+++ b/Open-Lab-0.1/Open Lab 1.3
@@ -4,11 +4,14 @@ namespace Open_Lab_1._3
 {
     class Program
     {
+        public static int Addition(int cislo)
+        {
+            return (cislo + 1);
+        }
         static void Main(string[] args)
         {
-            int cislo = 9;
-            cislo++;
-            Console.WriteLine(cislo);
+            Console.WriteLine(Addition(9));
         }
     }
 }
+
