--- a/Open-Lab-0.1/Open-Lab-2.1
+++ b/Open-Lab-0.1/Open-Lab-2.1
@@ -1,16 +1,13 @@
-﻿using System;
+using System;
 
 namespace OpenLab
 {
     class Program
     {
-        public static double Remainder(double number1, double number2) 
-        {
-            return (number1 % number2);
-        }
         static void Main(string[] args)
         {
-            Console.WriteLine(Remainder(1, 3));
+            float[] array1 = { 1.1F, 2.2F, 3.3F, 4.4F, 5.5F };
+            Console.WriteLine(array1[1]);
         }
     }
 }
