--- a/Open-Lab-0.1/Open-Lab-2.4
+++ b/Open-Lab-0.1/Open-Lab-2.4
@@ -1,17 +1,20 @@
-﻿using System;
+using System;
 
-namespace ConsoleApp1
+namespace Povedz_dost
 {
     class Program
     {
         public static int GetLegsCount(int chickens, int cows, int pigs)
         {
-            return (chickens * cows * pigs);
-                
+            int chickenlegs = chickens * 2;
+            int cowlegs = cows * 4;
+            int piglegs = pigs * 4;
+            return (chickenlegs + cowlegs + piglegs);
+
         }
         static void Main(string[] args)
         {
-            Console.WriteLine(GetLegsCount(2,4,4));
+            Console.WriteLine(GetLegsCount(2, 2 ,4));
         }
     }
 }
