Update and rename Class1.cs to Open-Lab 3.1

--- a/Open-Lab-0.1/Open-Lab 3.1
+++ b/Open-Lab-0.1/Open-Lab 3.1
@@ -13,3 +13,18 @@ namespace ConsoleApp2
         }
     }
 }
+
+using System;
+
+namespace ConsoleApp2
+{
+    class Program
+    {
+        static void Main(string[] args)
+        {
+            var arr = new Class1();
+            arr.Array();
+        }
+    }
+}
+
